{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 35,
  "lineage": "5a315bda-92f7-9a6c-19db-7520ae943a67",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "tgw3366",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:411218437052:transit-gateway/tgw-02654fd6cb36b4235",
            "association_default_route_table_id": "tgw-rtb-0f6d0c2c1fa05c096",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "tgw3366",
            "dns_support": "enable",
            "id": "tgw-02654fd6cb36b4235",
            "owner_id": "411218437052",
            "propagation_default_route_table_id": "tgw-rtb-0f6d0c2c1fa05c096",
            "tags": {
              "Name": "tgw3366"
            },
            "tags_all": {
              "Name": "tgw3366"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tgw3366et",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411218437052:transit-gateway-route-table/tgw-rtb-032f1e9df213d0a4f",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-032f1e9df213d0a4f",
            "transit_gateway_id": "tgw-02654fd6cb36b4235"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw3366"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw33attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-03eec088dee653968",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0941bf5eb1f7cebc0",
              "subnet-0f9fb964e14b8fbc7"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-02654fd6cb36b4235",
            "vpc_id": "vpc-01da6c7be6e2d1a07",
            "vpc_owner_id": "411218437052"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw3366",
            "data.aws_subnet_ids.subnets33",
            "data.terraform_remote_state.network33"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw66attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0cbe3998b588db0e2",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0577c574f98278c14",
              "subnet-0d7216bd9115ae979"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-02654fd6cb36b4235",
            "vpc_id": "vpc-04ef7afd031470723",
            "vpc_owner_id": "411218437052"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw3366",
            "data.aws_subnet_ids.subnets66",
            "data.terraform_remote_state.network66"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "r33",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "10.66.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08132915d873e6b9f3170539655",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08132915d873e6b9f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-02654fd6cb36b4235",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.tgw3366",
            "data.terraform_remote_state.network33"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "r66",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "10.33.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0dcb6f3c39462e4d33196965804",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dcb6f3c39462e4d3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-02654fd6cb36b4235",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.tgw3366",
            "data.terraform_remote_state.network66"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all33",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.33.0.0/16",
              "10.66.0.0/16"
            ],
            "description": "allow all traffic to transit gateway 66",
            "from_port": 0,
            "id": "sgrule-3139809105",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02c88e645ecf2e575",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network33"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all66",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.33.0.0/16",
              "10.66.0.0/16"
            ],
            "description": "allow all traffic to transit gateway 66",
            "from_port": 0,
            "id": "sgrule-4048994427",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-074b7e9508eccc502",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network66"
          ]
        }
      ]
    }
  ]
}